# AlphaQuat

./: .dockerignore  .gitignore  :memory  AGENTS.md  README.md  config.yaml.example  experiments_label_gain.json  experiments_label_gain.md  opencode.json  pyproject.toml  walkforward_results.json
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/superpowers/plans/: 2026-05-18-data-fetcher-plan.md  2026-05-18-features-plan.md  2026-05-19-backtest-engine-plan.md  2026-05-19-lightgbm-model-plan.md  2026-05-19-strategy-base-class.md  2026-05-26-experiment-variants.md  2026-05-26-transformer-sr.md  2026-05-27-scenario-dataset-curation.md
scripts/: experiment_label_gain.py  fetch_holder_number.py  walkforward.py
src/alpha_quat/: __init__.py  __main__.py  cli.py  config.py
tests/: test_config.py  test_fetcher.py  test_metadata.py  test_pipeline.py  test_source.py  test_writer.py
tests/test_backtest/: test_config.py  test_engine.py  test_filters.py  test_metrics.py  test_portfolio.py  test_position_sizing.py  test_rebalance.py
tests/test_data/: test_sr_cache.py
tests/test_experiment/: test_config.py  test_registry.py
tests/test_features/: test_alpha158.py  test_alpha_ext.py  test_alpha_fund.py  test_engine.py  test_factor.py  test_pipeline.py  test_registry.py
tests/test_model/: test_data.py  test_lightgbm_config.py  test_lightgbm_evaluate.py  test_lightgbm_pipeline.py  test_lightgbm_train.py  test_variant_registry.py
tests/test_sources/: test_daily.py  test_daily_basic.py  test_stk_st.py  test_stock_basic.py  test_stock_st.py  test_trade_cal.py
tests/test_strategy/: test_equal_weight.py  test_imports.py  test_ma_cross.py  test_position.py  test_signal.py  test_strategy.py  test_types.py
(+125 files in other folders)
