[project]
name = "alpha-quat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.2",
    "pyarrow>=24.0.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "ruff>=0.15.12",
    "tushare>=1.4.29",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
